<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <com.lookuptalk.customfonts.MyTextView_Normal
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_30sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_picker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_border"
                android:clickable="true"
                android:focusable="true"
                app:ccp_hintExampleNumber="true"
                app:ccp_showNameCode="false"
                app:ccp_textSize="@dimen/_15sdp" />

            <com.lookuptalk.customfonts.EditeText_font
                android:id="@+id/etMobile"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@drawable/bottom_border"
                android:hint="@string/enter_mobile"
                android:inputType="number"
                android:maxLength="10"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/_15sdp" />


        </LinearLayout>

        <com.lookuptalk.customfonts.MyTextView_Normal
            android:id="@+id/tv_OTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:background="@drawable/otp_bg"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/get_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_70sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_1sdp"
                android:layout_weight="1"
                android:background="@color/or_border" />

            <com.lookuptalk.customfonts.MyTextView_Normal
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/gray"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_1sdp"
                android:layout_weight="1"
                android:background="@color/or_border" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_googlesign"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:background="@drawable/google_bg"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/google_icon_bg"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google" />

            </LinearLayout>

            <com.lookuptalk.customfonts.MyTextView_Normal
                android:id="@+id/tv_googlelogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:text="@string/signup_gmail"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
