<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llverification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ivBackbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_30sdp"
        android:onClick="onClick"
        android:src="@drawable/ic_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_60sdp"
        android:orientation="vertical">

        <com.lookuptalk.customfonts.Ferrara_Bold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:textAllCaps="true"
            android:text="@string/otp_verifcation"
            android:textColor="@color/gray"
            android:textSize="@dimen/_30sdp" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:bar_active_color="@color/black"
            app:bar_enabled="true"
            app:bar_error_color="@color/red"
            app:bar_height="1.5dp"
            app:bar_inactive_color="@color/black"
            app:bar_margin_left="2dp"
            app:bar_margin_right="2dp"
            app:box_margin="0dp"
            app:height="40dp"
            app:length="4"
            app:otp=""
            app:otp_text_size="20dp"
            app:width="40dp" />

        <com.lookuptalk.customfonts.MyTextView_Normal
            android:id="@+id/tvResendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:text="@string/resend_otp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="@dimen/_16sdp" />

        <com.lookuptalk.customfonts.MyTextView_Normal
            android:id="@+id/tv_Verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:background="@drawable/otp_bg"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />



    </LinearLayout>


</LinearLayout>
